changed h1 and p message

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<section>
-		<h1>Going to Git me some GitHub & Command Line Training</h1>
-		<p>Git going on training. Lifelong learning rocks.</p>
+		<h1>Going to Git me some GitHub & Command Line Training! Woo Hoo!</h1>
+		<p>Git going on training. Lifelong learning rocks!</p>
 		<img src="img/happy-blue-robot.png">
 	</section>
 </body>
